feat: add dependency md5, remove homepage and edit description in package.json

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "md5": "^2.3.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -35,7 +36,7 @@
       "last 1 safari version"
     ]
   },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "description": "Game pirates created by vm-31",
   "main": "index.js",
   "devDependencies": {},
   "repository": {
@@ -46,6 +47,5 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Chipsa12/PiratesVM-31/issues"
-  },
-  "homepage": "https://github.com/Chipsa12/PiratesVM-31#readme"
+  }
 }
