--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^26.0.14",
+    "@types/node": "^14.11.5",
+    "@types/react": "^16.9.51",
+    "@types/react-dom": "^16.9.8",
     "md5": "^2.3.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -13,7 +17,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
-    "three": "^0.121.1"
+    "three": "^0.121.1",
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
