--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@types/node": "^14.11.5",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
+    "@types/socket.io-client": "^1.4.34",
     "@types/styled-components": "^5.1.4",
     "md5": "^2.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "rxjs": "^6.6.3",
+    "socket.io-client": "^2.3.1",
     "styled-components": "^5.2.0",
     "three": "^0.121.1",
     "typescript": "^4.0.3"
