--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "md5": "^2.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "rxjs": "^6.6.3",
     "socket.io-client": "^2.3.1",
     "styled-components": "^5.2.0",
