--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^14.11.5",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
     "@types/socket.io-client": "^1.4.34",
     "@types/styled-components": "^5.1.4",
     "md5": "^2.3.0",
