--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "rxjs": "^6.6.3",
     "socket.io-client": "^2.3.1",
     "styled-components": "^5.2.0",
+    "styled-normalize": "^8.0.7",
     "three": "^0.121.1",
     "typescript": "^4.0.3"
   },
